<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/nav_title_settings" />
        <item
            android:id="@+id/nav_call_log"
            android:title="@string/nav_title_call_log" />
        <item
            android:id="@+id/nav_other_apps"
            android:title="@string/nav_title_other_apps" />
        <item
            android:id="@+id/nav_privacy_policy"
            android:title="@string/nav_title_privacy_policy" />
        <item
            android:id="@+id/nav_about_app"
            android:title="@string/nav_title_about_app" />
    </group>

</menu>